2011-05-26  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Set default WS language based on config.language
	* [TASK] Updated PDF documentation and optmized it to reduce file size
	* [TASK] Added TypoScript configuration sample for generating legacy parametrized URL
2011-05-25  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Removed duplicated Confederation services
	* [TASK] Fall back to Confederation services when an organization is not yet configured
	* [BUGFIX] Version was not taken into account

2011-05-24  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Updated documentation for selector form
	* [TASK] Enhanced URL generation with TypoScript

2011-05-23  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Generated parametrized URI's
	* [TASK] Added dynamic retrieval of services
	* [TASK] Added dynamic retrieval of organizations
	* [TASK] Removed global declaration with XCLASS definition
	* [TASK] Added TypoScript for including jQuery

2011-05-21  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Added skeleton for the form selector plugin

2011-05-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Added support of organizations
	* [TASK] Retrieving the list of communities using a CSV data file

2011-04-22  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raised version to 1.1.2

2011-04-21  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Integrated Italian translation

2011-04-08  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raised version to 1.1.1
	* [BUGFIX] #25848: Service version is not taken into account
	* [DOCUMENTATION] Update constant editor screenshot to reflect change of constant name
	* [DOCUMENTATION] Fixed typo in cache configuration
	* [BUGFIX] #25846: Version wizard fails to save configuration on TYPO3 4.4

2011-03-23  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 1.1.0
	* Task #13767: Complete German translation

2011-03-11  Xavier Perseguers  <xavier@causal.ch>
