@@ -5,8 +5,6 @@ $extensionPath = t3lib_extMgm::extPath('egovapi');
 $classPath = $extensionPath . 'Classes/';
 
 return array(
-	'tx\egovapi\Controller\Pi2\demo' => $classPath . 'Controller/Pi2/demo.php',
-	'tx_egovapi_dao_cache' => $classPath . 'Dao/Cache.php',
 	'tx_egovapi_dao_dao' => $classPath . 'Dao/Dao.php',
 	'tx_egovapi_dao_webservice' => $classPath . 'Dao/WebService.php',
 	'tx_egovapi_domain_model_abstractentity' => $classPath . 'Domain/Model/AbstractEntity.php',
@@ -51,6 +49,7 @@ return array(
 	'tx_egovapi_domain_repository_topicrepository' => $classPath . 'Domain/Repository/TopicRepository.php',
 	'tx_egovapi_domain_repository_viewrepository' => $classPath . 'Domain/Repository/ViewRepository.php',
 	'tx_egovapi_pibase' => $classPath . 'Controller/class.tx_egovapi_pibase.php',
+	'tx_egovapi_utility_cache' => $classPath . 'Utility/Cache.php',
 	'tx_egovapi_utility_constants' => $classPath . 'Utility/Constants.php',
 	'tx_egovapi_utility_flexform' => $classPath . 'Utility/FlexForm.php',
 	'tx_egovapi_utility_objects' => $classPath . 'Utility/Objects.php',
